# scratch

./: .gitignore  COPYING  README.md
arcan/: makefile
bash/: flac_to_mp3_128.sh  flac_to_mp3_320.sh  lbmtool_all.sh  make_archive_bundles.sh  mirror_git_repo.sh  mp4_to_mp3_320.sh  odt_to_md.sh  pngout_all.sh  regenerate_vidcfg_bin.sh  rename_to_lowercase.sh  transcode_deinterlace_16by9.sh  transcode_deinterlace_4by3.sh  transcode_deinterlace_pal_4by3.sh  transcode_dvd_16by9.sh  transcode_dvd_4by3.sh  vtt_to_srt.sh  wav_to_mp3_320.sh
c/arena/: arena.c
c/gles2/: CMakeLists.txt  ada8x8.xbm  main.c  makefile  r_gl1.c  renderer.c  renderer.h  res.c
cpp/tvlua/: CMakeLists.txt  hello.cpp  main.cpp  main_bak.cpp  main_bak2.cpp  tvlua.cpp  tvlua.h
cpp/tvlua/scripts/: dialog.lua  hello.lua  messagebox.lua  point.lua  stringview.lua
formats/: rtl.hexpat  wad.hexpat
kaitai/: build_art.ksy  build_grp.ksy  build_map.ksy  gta3_col.ksy  gta3_dir.ksy  gta3_dir_example.py  hrot_pak.ksy  id_pak.ksy  id_wad.ksy  intel_dvi.ksy  kaos_dlf.ksy  mact_rox.ksy  mact_wad.ksy  narbaculardrop_cmf.ksy  narbaculardrop_ore.ksy  pak.ksy  portal2d_map.ksy  quake_demo.ksy  quake_mdl.ksy  quake_pak.ksy  quake_vcr.ksy  rott_demo.ksy  rott_mapset.ksy  rott_protocol.ksy  rott_types.ksy  source2_dmx.ksy  ted5.ksy  ted5_example.py  ted5_maphead.ksy  ted5_maptemp.ksy  unreal_psk.ksy  vtmb_tth.ksy  wad.ksy  worldcraft_ol.ksy
licenses/: LICENSE.ACSL
md/: gm_betac17.md
pascal/: hello.pas  lua.pas  lua_test.pas  sdl3.pas  sdl3_test.pas
python/: vue_export.py
tcl/: stopwatch.tcl
zig/: hello.zig
(+362 files in other folders)
